# s2mat

./: CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: FindNewmat.camke
config/: lidar_sim.yaml  ouster_os1_32.yaml  velodyne_16.yaml  velodyne_64.yaml
include/: utils.h
include/back_end/: back_end.h  voi_back_end.h
include/front_end/: rimg_front_end.h
include/front_end/rimg_detector/: rimg_cluster.h  rimg_object_detector.h  scan_preprocessor.h
include/front_end/tracks_processor/: tracks_processor.h
include/map_merger/: map_merger.h
include/nnt/: ekf.h  filter.h  imm_filter.h  nnt.h  nnt_ros.h  nnt_tracker.h
include/nnt/base/: defs.h  tracker.h
include/nnt/data/: filter_state.h  imm_hypothesis.h  imm_state.h  kalman_filter_state.h  observation.h  pairing.h  track.h
include/nnt/data_association/: data_association_interface.h  greedy_nearest_neighbor_data_association.h
include/nnt/motion_models/: constant_motion_model.h  coordinated_turn_motion_model.h  motion_model.h  wiener_process_acceleration_motion_model.h
include/nnt/occlusion_handling/: basic_occlusion_manager.h  occlusion_manager.h
include/nnt/ros/: geometry_utils.h  params.h
include/rectangular_lsap/: rectangular_lsap.cpp  rectangular_lsap.h
launch/: voi_sim.launch
launch/params/: nnt.yaml
msg/: Submap.msg  TrackedObject.msg  TrackedObjects.msg
rviz/: rviz.rviz
src/: utils.cpp
src/back_end/: back_end.cpp  voi_back_end.cpp  voi_back_end_node.cpp
src/front_end/: rimg_front_end.cpp  rimg_front_end_node.cpp
src/front_end/nnt/: ekf.cpp  imm_filter.cpp  nnt.cpp  nnt_node.cpp  nnt_tracker.cpp
src/front_end/nnt/data_association/: greedy_nearest_neighbor_data_association.cpp
src/front_end/nnt/occlusion_handling/: basic_occlusion_manager.cpp
src/front_end/nnt/ros/: geometry_utils.cpp  nnt_ros.cpp  params.cpp
src/front_end/rimg_detector/: rimg_cluster.cpp  rimg_object_detector.cpp  scan_preprocessor.cpp
src/front_end/tracks_processor/: tracks_processor.cpp
src/map_merger/: map_merger.cpp  map_merger_node.cpp
